syntax = "proto3";

package directory.justin.portfolio;

service Portfolio {
    rpc GetEducation(Empty) returns (GetEducationResponse) {}
    
}

message Empty {}

message GetEducationResponse {
    repeated Education education = 1;
}


message Education {
    optional string school = 1;
    string degree = 2;
    string major = 3;
    string start_date = 4;
    string end_date = 5;
    double gpa = 6;
}